# èƒŒåŒ…UIè„šæœ¬
extends CanvasLayer

# å¯¼å‡ºå˜é‡ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­é…ç½®ï¼‰
@export var background_texture: Texture2D = null  # èƒŒæ™¯å›¾ç‰‡ï¼ˆå¯é€‰ï¼‰
@export var columns: int = 4  # ç½‘æ ¼åˆ—æ•°

# èŠ‚ç‚¹å¼•ç”¨ï¼ˆéœ€è¦åœ¨åœºæ™¯ä¸­é…ç½®ï¼‰
@onready var panel: Panel = $Control/Panel
@onready var background_texture_rect: TextureRect = $Control/Panel/BackgroundTexture
@onready var title_label: Label = $Control/Panel/TitleLabel
@onready var item_grid: GridContainer = $Control/Panel/ScrollContainer/ItemGrid
@onready var scroll_container: ScrollContainer = $Control/Panel/ScrollContainer
@onready var close_button: Button = $Control/Panel/CloseButton
@onready var no_item_label: Label = $Control/Panel/NoItemLabel
@onready var item_detail_panel: Panel = $Control/Panel/ItemDetailPanel
@onready var item_detail_name: Label = $Control/Panel/ItemDetailPanel/NameLabel
@onready var item_detail_desc: Label = $Control/Panel/ItemDetailPanel/DescriptionLabel
@onready var item_detail_content: Label = $Control/Panel/ItemDetailPanel/ContentLabel
@onready var item_detail_icon: TextureRect = $Control/Panel/ItemDetailPanel/IconTexture
@onready var item_detail_close: Button = $Control/Panel/ItemDetailPanel/CloseButton

func _ready():
	# æ·»åŠ åˆ°ç»„
	add_to_group("inventory_ui")
	
	# åˆå§‹éšè—
	visible = false
	if item_detail_panel:
		item_detail_panel.visible = false
	
	# è¿æ¥æŒ‰é’®
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)
	if item_detail_close:
		item_detail_close.pressed.connect(_on_detail_close_pressed)
	
	# è¿æ¥ç‰©å“æ”¶é›†ç³»ç»Ÿä¿¡å·
	if has_node("/root/ItemCollection"):
		ItemCollection.item_collected.connect(_on_item_collected)
		print("[INFO] âœ… èƒŒåŒ…UIå·²è¿æ¥ItemCollectionä¿¡å·")
	else:
		print("[ERROR] âŒ ItemCollectionæœªæ‰¾åˆ°ï¼ŒèƒŒåŒ…UIæ— æ³•æ¥æ”¶ç‰©å“æ”¶é›†ä¿¡å·")
	
	# è®¾ç½®ç½‘æ ¼åˆ—æ•°
	if item_grid:
		item_grid.columns = columns
	
	# è®¾ç½®èƒŒæ™¯å›¾ç‰‡
	if background_texture and background_texture_rect:
		background_texture_rect.texture = background_texture
		background_texture_rect.visible = true
		# å¦‚æœæœ‰èƒŒæ™¯å›¾ï¼Œè®¾ç½®Panelä¸ºé€æ˜
		if panel:
			var style_box = StyleBoxEmpty.new()
			panel.add_theme_stylebox_override("panel", style_box)
		print("[INFO] å·²è®¾ç½®èƒŒåŒ…UIèƒŒæ™¯å›¾ç‰‡")
	elif background_texture_rect:
		background_texture_rect.visible = false
	
	# è®¾ç½®æ ·å¼
	_setup_ui_style()
	
	# åˆå§‹æ›´æ–°
	update_item_list()

func _setup_ui_style():
	"""è®¾ç½®UIæ ·å¼ï¼ˆèƒŒåŒ…ä¸»é¢˜ï¼‰"""
	if panel:
		var style_box = StyleBoxFlat.new()
		# â­ èƒŒåŒ…ä¸»é¢˜ï¼šä½¿ç”¨æ£•è‰²/çš®é©è‰²ç³»ï¼Œä½“ç°èƒŒåŒ…çš„è´¨æ„Ÿ
		style_box.bg_color = Color(0.15, 0.12, 0.10, 0.95)  # æ·±æ£•è‰²èƒŒæ™¯ï¼Œåƒçš®é©
		style_box.border_color = Color(0.4, 0.3, 0.2, 1.0)  # æ£•è‰²è¾¹æ¡†ï¼ŒåƒèƒŒåŒ…è¾¹ç¼˜
		style_box.border_width_left = 6  # å¢å¤§è¾¹æ¡†å®½åº¦
		style_box.border_width_top = 6
		style_box.border_width_right = 6
		style_box.border_width_bottom = 6
		style_box.corner_radius_top_left = 15  # å¢å¤§åœ†è§’
		style_box.corner_radius_top_right = 15
		style_box.corner_radius_bottom_left = 15
		style_box.corner_radius_bottom_right = 15
		# â­ æ·»åŠ é˜´å½±æ•ˆæœï¼Œå¢å¼ºèƒŒåŒ…çš„ç«‹ä½“æ„Ÿ
		style_box.shadow_color = Color(0.0, 0.0, 0.0, 0.5)
		style_box.shadow_size = 10
		style_box.shadow_offset = Vector2(0, 5)
		panel.add_theme_stylebox_override("panel", style_box)
	
	if item_detail_panel:
		var detail_style = StyleBoxFlat.new()
		detail_style.bg_color = Color(0.2, 0.17, 0.14, 0.98)  # ç¨äº®çš„æ£•è‰²
		detail_style.border_color = Color(0.5, 0.4, 0.3, 1.0)  # é‡‘è‰²è¾¹æ¡†
		detail_style.border_width_left = 6
		detail_style.border_width_top = 6
		detail_style.border_width_right = 6
		detail_style.border_width_bottom = 6
		detail_style.corner_radius_top_left = 15
		detail_style.corner_radius_top_right = 15
		detail_style.corner_radius_bottom_left = 15
		detail_style.corner_radius_bottom_right = 15
		detail_style.shadow_color = Color(0.0, 0.0, 0.0, 0.5)
		detail_style.shadow_size = 10
		detail_style.shadow_offset = Vector2(0, 5)
		item_detail_panel.add_theme_stylebox_override("panel", detail_style)
	
	if title_label:
		title_label.add_theme_color_override("font_color", Color(1.0, 0.9, 0.7, 1.0))  # é‡‘è‰²æ–‡å­—
		title_label.add_theme_font_size_override("font_size", 56)  # ä»40å¢åŠ åˆ°56
		title_label.add_theme_constant_override("outline_size", 4)
		title_label.add_theme_color_override("font_outline_color", Color.BLACK)
	
	if no_item_label:
		no_item_label.add_theme_color_override("font_color", Color(0.8, 0.7, 0.6, 1.0))  # æ·¡æ£•è‰²
		no_item_label.add_theme_font_size_override("font_size", 40)  # å¢å¤§å­—ä½“

func _input(event: InputEvent):
	"""å¤„ç†è¾“å…¥äº‹ä»¶"""
	if event.is_action_pressed("ui_cancel") and visible:
		if item_detail_panel and item_detail_panel.visible:
			hide_item_detail()
		else:
			hide_inventory_ui()
		get_viewport().set_input_as_handled()

func show_inventory_ui():
	"""æ˜¾ç¤ºèƒŒåŒ…UI"""
	visible = true
	update_item_list()
	
	# é€šçŸ¥ç©å®¶è¿›å…¥äº¤äº’çŠ¶æ€
	var player = get_tree().get_first_node_in_group("player")
	if player and player.has_method("set_interacting"):
		player.set_interacting(true)

func hide_inventory_ui():
	"""éšè—èƒŒåŒ…UI"""
	visible = false
	hide_item_detail()
	
	# é€šçŸ¥ç©å®¶é€€å‡ºäº¤äº’çŠ¶æ€
	var player = get_tree().get_first_node_in_group("player")
	if player and player.has_method("set_interacting"):
		player.set_interacting(false)

func update_item_list():
	"""æ›´æ–°ç‰©å“åˆ—è¡¨"""
	print("[DEBUG] ğŸ”„ æ›´æ–°èƒŒåŒ…ç‰©å“åˆ—è¡¨")
	
	if not has_node("/root/ItemCollection"):
		print("[ERROR] ItemCollectionæœªæ‰¾åˆ°ï¼Œæ— æ³•æ›´æ–°èƒŒåŒ…")
		return
	
	if not item_grid:
		print("[ERROR] item_gridæœªæ‰¾åˆ°ï¼Œæ— æ³•æ›´æ–°èƒŒåŒ…")
		return
	
	# æ¸…ç©ºåˆ—è¡¨
	for child in item_grid.get_children():
		child.queue_free()
	
	# è·å–æ”¶é›†çš„ç‰©å“
	var collected_items = ItemCollection.get_collected_items_info()
	print("[DEBUG] å·²æ”¶é›†ç‰©å“æ•°é‡: ", collected_items.size())
	print("[DEBUG] å·²æ”¶é›†ç‰©å“åˆ—è¡¨: ", collected_items)
	
	if collected_items.is_empty():
		# æ˜¾ç¤º"æ— ç‰©å“"æç¤º
		if no_item_label:
			no_item_label.visible = true
		print("[DEBUG] èƒŒåŒ…ä¸ºç©º")
		return
	
	if no_item_label:
		no_item_label.visible = false
	
	# åˆ›å»ºç‰©å“é¡¹
	for item in collected_items:
		print("[DEBUG] åˆ›å»ºç‰©å“æ§½: ", item.get("name", "æœªçŸ¥"))
		_create_item_slot(item)
	
	print("[DEBUG] âœ… èƒŒåŒ…ç‰©å“åˆ—è¡¨æ›´æ–°å®Œæˆ")

func _create_item_slot(item: Dictionary):
	"""åˆ›å»ºç‰©å“æ§½UIï¼ˆèƒŒåŒ…é£æ ¼ï¼‰"""
	var item_id = item.get("item_id", "")
	var name = item.get("name", "æœªçŸ¥ç‰©å“")
	var count = item.get("count", 1)
	var item_type = item.get("type", "unknown")
	
	# â­ åˆ›å»ºç‰©å“æ§½å®¹å™¨ - å¢å¤§å°ºå¯¸
	var item_slot = VBoxContainer.new()
	item_slot.custom_minimum_size = Vector2(180, 220)  # ä»150x180å¢åŠ åˆ°180x220
	item_slot.add_theme_constant_override("separation", 10)  # å¢å¤§é—´è·
	
	# â­ ç‰©å“å›¾æ ‡ï¼ˆæ”¯æŒåŠ è½½å®é™…å›¾æ ‡ï¼‰- å¢å¤§å°ºå¯¸
	var icon_path = item.get("icon", "")
	var icon_rect = TextureRect.new()
	icon_rect.custom_minimum_size = Vector2(120, 120)  # ä»100x100å¢åŠ åˆ°120x120
	icon_rect.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
	icon_rect.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
	
	if icon_path != "":
		var icon_texture = load(icon_path)
		if icon_texture:
			icon_rect.texture = icon_texture
		else:
			# å¦‚æœåŠ è½½å¤±è´¥ï¼Œä½¿ç”¨å ä½ç¬¦
			var placeholder = Label.new()
			# â­ æ ¹æ®ç‰©å“ç±»å‹ä½¿ç”¨ä¸åŒçš„å ä½ç¬¦
			match item_type:
				"trophy":
					# å¥–æ¯ä½¿ç”¨åç§°ä¸­çš„emojiï¼ˆå¦‚æœåç§°ä»¥emojiå¼€å¤´ï¼‰
					var item_name = item.get("name", "")
					if item_name.length() > 0 and item_name[0] in ["ğŸŒ¿", "â­", "ğŸŒ™", "ğŸ†"]:
						placeholder.text = item_name[0]
					else:
						placeholder.text = "ğŸ†"
				"poem":
					placeholder.text = "ğŸ“œ"
				_:
					placeholder.text = "ğŸ“¦"
			placeholder.add_theme_font_size_override("font_size", 80)  # ä»64å¢åŠ åˆ°80
			placeholder.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
			placeholder.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
			# è®¾ç½®å ä½ç¬¦å¤§å°ä»¥å¡«å……æ•´ä¸ªicon_rect
			placeholder.set_anchors_preset(Control.PRESET_FULL_RECT)
			icon_rect.add_child(placeholder)
	else:
		# æ²¡æœ‰å›¾æ ‡æ—¶ä½¿ç”¨å ä½ç¬¦
		var placeholder = Label.new()
		# â­ æ ¹æ®ç‰©å“ç±»å‹ä½¿ç”¨ä¸åŒçš„å ä½ç¬¦
		match item_type:
			"trophy":
				# å¥–æ¯ä½¿ç”¨åç§°ä¸­çš„emojiï¼ˆå¦‚æœåç§°ä»¥emojiå¼€å¤´ï¼‰
				var item_name = item.get("name", "")
				if item_name.length() > 0 and item_name[0] in ["ğŸŒ¿", "â­", "ğŸŒ™", "ğŸ†"]:
					placeholder.text = item_name[0]
				else:
					placeholder.text = "ğŸ†"
			"poem":
				placeholder.text = "ğŸ“œ"
			_:
				placeholder.text = "ğŸ“¦"  # èƒŒåŒ…å›¾æ ‡
		placeholder.add_theme_font_size_override("font_size", 80)  # ä»64å¢åŠ åˆ°80
		icon_rect.add_child(placeholder)
	
	item_slot.add_child(icon_rect)
	
	# â­ ç‰©å“åç§° - å¢å¤§å­—ä½“
	var name_label = Label.new()
	name_label.text = name
	name_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	name_label.add_theme_color_override("font_color", Color(1.0, 0.95, 0.85, 1.0))  # æ·¡é‡‘è‰²
	name_label.add_theme_font_size_override("font_size", 28)  # ä»22å¢åŠ åˆ°28
	name_label.add_theme_constant_override("outline_size", 2)
	name_label.add_theme_color_override("font_outline_color", Color.BLACK)
	name_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	item_slot.add_child(name_label)
	
	# â­ ç‰©å“æ•°é‡ï¼ˆå¦‚æœå¯å †å ï¼‰- å¢å¤§å­—ä½“
	if item.get("stackable", false) and count > 1:
		var count_label = Label.new()
		count_label.text = "x%d" % count
		count_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		count_label.add_theme_color_override("font_color", Color(0.8, 0.9, 1.0, 1.0))  # æ·¡è“è‰²
		count_label.add_theme_font_size_override("font_size", 24)  # ä»20å¢åŠ åˆ°24
		count_label.add_theme_constant_override("outline_size", 2)
		count_label.add_theme_color_override("font_outline_color", Color.BLACK)
		item_slot.add_child(count_label)
	
	# æ·»åŠ ç‚¹å‡»åŒºåŸŸ
	var click_area = Control.new()
	click_area.custom_minimum_size = item_slot.custom_minimum_size
	click_area.gui_input.connect(func(event): _on_item_clicked(event, item_id))
	item_slot.add_child(click_area)
	
	# â­ è®¾ç½®èƒŒæ™¯æ ·å¼ï¼ˆèƒŒåŒ…æ ¼å­é£æ ¼ï¼‰
	var style_box = StyleBoxFlat.new()
	style_box.bg_color = Color(0.25, 0.2, 0.15, 0.9)  # æ£•è‰²èƒŒæ™¯ï¼ŒåƒèƒŒåŒ…æ ¼å­
	style_box.border_color = Color(0.5, 0.4, 0.3, 1.0)  # é‡‘è‰²è¾¹æ¡†
	style_box.border_width_left = 3  # å¢å¤§è¾¹æ¡†
	style_box.border_width_top = 3
	style_box.border_width_right = 3
	style_box.border_width_bottom = 3
	style_box.corner_radius_top_left = 8  # å¢å¤§åœ†è§’
	style_box.corner_radius_top_right = 8
	style_box.corner_radius_bottom_left = 8
	style_box.corner_radius_bottom_right = 8
	# â­ æ·»åŠ å†…é˜´å½±ï¼Œå¢å¼ºæ ¼å­æ„Ÿ
	style_box.shadow_color = Color(0.0, 0.0, 0.0, 0.3)
	style_box.shadow_size = 5
	style_box.shadow_offset = Vector2(0, 2)
	
	var panel = Panel.new()
	panel.add_theme_stylebox_override("panel", style_box)
	panel.mouse_filter = Control.MOUSE_FILTER_IGNORE
	item_slot.add_child(panel)
	item_slot.move_child(panel, 0)  # ç§»åˆ°æœ€åº•å±‚
	
	# æ·»åŠ åˆ°ç½‘æ ¼
	item_grid.add_child(item_slot)

func _on_item_clicked(event: InputEvent, item_id: String):
	"""ç‰©å“ç‚¹å‡»äº‹ä»¶"""
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		show_item_detail(item_id)

func show_item_detail(item_id: String):
	"""æ˜¾ç¤ºç‰©å“è¯¦æƒ…"""
	if not has_node("/root/ItemCollection"):
		return
	
	var item = ItemCollection.get_item_info(item_id)
	if item.is_empty():
		return
	
	if item_detail_panel:
		item_detail_panel.visible = true
	
	if item_detail_name:
		item_detail_name.text = item.get("name", "æœªçŸ¥ç‰©å“")
		item_detail_name.add_theme_font_size_override("font_size", 48)  # å¢å¤§å­—ä½“
	
	# æ˜¾ç¤ºç‰©å“å›¾æ ‡ï¼ˆå¦‚æœæœ‰ï¼‰
	if item_detail_icon:
		var icon_path = item.get("icon", "")
		if icon_path != "":
			var icon_texture = load(icon_path)
			if icon_texture:
				item_detail_icon.texture = icon_texture
				item_detail_icon.visible = true
			else:
				item_detail_icon.visible = false
		else:
			item_detail_icon.visible = false
	
	if item_detail_desc:
		var desc = item.get("description", "")
		var item_type = item.get("type", "")
		var rarity = item.get("rarity", "common")
		
		var type_text = ""
		match item_type:
			"poem":
				type_text = "ğŸ“œ è¯—è¯"
			"book":
				type_text = "ğŸ“š ä¹¦ç±"
			"tool":
				type_text = "ğŸ”§ å·¥å…·"
			"trophy":
				type_text = "ğŸ† å¥–æ¯"
			_:
				type_text = "ğŸ“¦ å…¶ä»–"
		
		var rarity_text = ""
		match rarity:
			"common":
				rarity_text = "æ™®é€š"
			"rare":
				rarity_text = "ç¨€æœ‰"
			"epic":
				rarity_text = "å²è¯—"
			"legendary":
				rarity_text = "ä¼ è¯´"
			_:
				rarity_text = "æ™®é€š"
		
		desc = "ç±»å‹: %s | å“è´¨: %s\n\n%s" % [type_text, rarity_text, desc]
		item_detail_desc.text = desc
		item_detail_desc.add_theme_font_size_override("font_size", 32)  # ä»24å¢åŠ åˆ°32
		item_detail_desc.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	
	if item_detail_content:
		var content = item.get("content", "")
		if content != "":
			item_detail_content.text = content
			item_detail_content.visible = true
			item_detail_content.add_theme_font_size_override("font_size", 28)  # ä»22å¢åŠ åˆ°28
			item_detail_content.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
		else:
			item_detail_content.visible = false

func hide_item_detail():
	"""éšè—ç‰©å“è¯¦æƒ…"""
	if item_detail_panel:
		item_detail_panel.visible = false

func _on_item_collected(item_id: String, count: int):
	"""ç‰©å“æ”¶é›†å›è°ƒ"""
	print("[DEBUG] ğŸ’ èƒŒåŒ…UIæ”¶åˆ°ç‰©å“æ”¶é›†ä¿¡å·: ", item_id, " x", count)
	update_item_list()
	print("[DEBUG] èƒŒåŒ…UIå·²æ›´æ–°ç‰©å“åˆ—è¡¨")
	# å¯ä»¥åœ¨è¿™é‡Œæ˜¾ç¤ºæ”¶é›†æç¤º

func _on_close_button_pressed():
	"""å…³é—­æŒ‰é’®ç‚¹å‡»"""
	hide_inventory_ui()

func _on_detail_close_pressed():
	"""è¯¦æƒ…å…³é—­æŒ‰é’®ç‚¹å‡»"""
	hide_item_detail()
